--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8275952e-1d79-4dc7-9d1c-991a9b2b5153"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
